Fix alignment on small/single column screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,8 +57,6 @@ footer a:hover, footer a:hover .fa {
 .column {
   min-width: 360px;
   max-width: 360px;
-  padding-left: 20px;
-  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -116,4 +114,12 @@ paper-card .card-actions {
   background-image: initial;
   width: 150px;
   height:150px;
+}
+
+
+@media only screen and (min-width: 400px) {
+  .column {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
